2009-04-19  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Fixed segfault when the PPD contains only a
	  default value but not an option for it (like
	  "*DefaultResolution: 600dpi" and the client inserts this as an
	  option setting into the PostScript input data stream (Windows
	  clients do so). Bug #324.

2009-03-30  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Custom page sizes were not accepted if one of the three
	  parameters "WidthOffset", "HeightOffset", or "Orientation" of the
	  "PageSize" option in the PPD file did not allow 0 as value.
	  Made error messages for the parameters of custom options more
	  readable.
	
	* foomaticrip.c, options.c: If there are printing system options
	  (like "media" of CUPS) and PPD options (like "PageSize") on the
	  command line and they do the same thing (like choosing the paper
	  size) let the setting of the PPD option always have priority,
	  as this is expected for a CUPS filter (see CUPS STR #3148). This 
	  is done by treating the printing system options before the PPD
	  options. This fixes Ubuntu bug #338999.

2009-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: Fixed segmentation fault in JCL option handling (bugs
	  #311 and #317).

2009-03-07  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.1.in: Fixed typos.

	* renderer.c: When doing the massaging of the remderer command line
	  foomatic-rip inserts 'gs' at the wrong place in command lines of
	  Foomatic 3.x-generated PPD files for the "Postscript" driver, leading
	  to duplicate calls of Ghostscript (bug #316).

	* foomaticrip.c: Fixed buffer overflow mentioned in bug #311.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>
	* foomaticrip.c: The value of the "execpath" variable in the config
	file was not used fully: Only the characters leading up to the first
	':' were copied into the programs $PATH environment variable.

2009-02-11  Lars Uebernickel <larsuebernickel@gmx.de>